# http-client-lib

./: CMakeLists.txt  library.h
src/http-client/: client.cpp  client.h  http_errors.cpp  http_errors.h
